Pruebas de autenticacion en Power BI index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>Este es un sitio web con Github Pages</h1>
-<p>Fue creado con amor para el curso de Git y Github de Platzi</p>
+
+<p>Tablero con autenticacion - Privado</p>
 <iframe title="Project Day 11 - Start" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=d0ebabc7-4c9d-4301-837a-b7d2c8b490a3&autoAuth=true&ctid=01198186-8218-4365-af9f-120fbe448cb2" frameborder="0" allowFullScreen="true"></iframe>
+
+<p>Tablero sin autenticacion - Publico</p>
+<iframe title="Project Day 11 - Start" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDIzNmFmN2QtNDc5ZC00NjU2LTlmZjItMzYyM2RjNDdkZTMwIiwidCI6IjAxMTk4MTg2LTgyMTgtNDM2NS1hZjlmLTEyMGZiZTQ0OGNiMiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
 <p><img src="https://i.imgur.com/qR77BXg.gif" /></p>
